project upload page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,3 +50,8 @@ body {
     text-wrap: balance;
   }
 }
+.leader {
+  background-image: url("/union.svg"); /* Remove "/public" */
+  background-repeat: no-repeat;
+  background-size: cover;
+}
